add initial fils

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </li>
         </ul>
       </section>
+      <!--===================our team=====-->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -99,6 +100,72 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!--====================our portfolio===-->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portpolio/img-first-photo.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portpolio/img-second-photo.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portpolio/img-third-photo.jpg"
+              alt="Meditaion App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditaion App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portpolio/img-four-photo.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portpolio/img-fifth-photo.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portpolio/img-six-photo.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
