--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="link-top" href="">Studio</a></li>
+          <li><a class="link-top" href="">Portfolio</a></li>
+          <li><a class="link-top" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -40,7 +42,7 @@
 
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="page-title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
