--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">WebStudio</a>
         <ul>
           <li><a class="link-top" href="">Studio</a></li>
           <li><a class="link-top" href="">Portfolio</a></li>
@@ -41,12 +42,12 @@
     </header>
 
     <main>
-      <section>
+      <section class="hero">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>We</h2>
+        <h2 hidden>We</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -79,7 +80,7 @@
         </ul>
       </section>
       <!--===================our team=====-->
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -184,7 +185,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
