--- a/index.html
+++ b/index.html
@@ -81,19 +81,20 @@
       </section>
       <!--===================our team=====-->
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="our-team">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Mark" width="264" height="260" />
 
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="our-team-discr">Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
 
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+
+            <p class="our-team-discr">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -103,7 +104,7 @@
               height="260"
             />
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="our-team-discr">Marketing</p>
           </li>
           <li>
             <img
@@ -113,13 +114,13 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="our-team-discr">UI Designer</p>
           </li>
         </ul>
       </section>
       <!--====================our portfolio===-->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -148,7 +149,7 @@
               width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
+            <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
@@ -185,8 +186,10 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo" href="./index.html"
+        >Web<span class="studio"> Studio </span></a
+      >
+      <p class="end">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
