add initial fils

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo" id="main-page" href="./index.html"
+          >Web<span class="studio-head">Studio</span></a
+        >
         <ul>
           <li><a class="link-top" href="">Studio</a></li>
           <li><a class="link-top" href="">Portfolio</a></li>
           <li><a class="link-top" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="link" href="mailto:info@devstudio.com"
