--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <body>
     <header>
       <nav>
-        <a class="logo" id="main-page" href="./index.html"
+        <a class="logo" href="./index.html"
           >Web<span class="studio-head">Studio</span></a
         >
         <ul>
-          <li><a class="link-top" href="">Studio</a></li>
+          <li><a class="link-top-one" href="./index.html">Studio</a></li>
           <li><a class="link-top" href="">Portfolio</a></li>
           <li><a class="link-top" href="">Contacts</a></li>
         </ul>
@@ -31,7 +31,7 @@
       <address class="address">
         <ul>
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link-address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -41,18 +41,19 @@
         </ul>
       </address>
     </header>
-
+    <!--========================section one=============-->
     <main>
       <section class="hero">
         <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
+      <!--===================section two===========-->
       <section>
         <h2 hidden>We</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="strategy">Strategy</h3>
+            <p class="strategy-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -80,14 +81,20 @@
           </li>
         </ul>
       </section>
-      <!--===================our team=====-->
+      <!--===================our team section three=====-->
       <section class="team">
         <h2 class="our-team">Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="Mark" width="264" height="260" />
+            <img
+              class="our-team-list"
+              src="./images/img.jpg"
+              alt="Mark"
+              width="264"
+              height="260"
+            />
 
-            <h3>Mark Guerrero</h3>
+            <h3 class="our-team-lead">Mark Guerrero</h3>
             <p class="our-team-discr">Product Designer</p>
           </li>
           <li>
@@ -119,7 +126,7 @@
           </li>
         </ul>
       </section>
-      <!--====================our portfolio===-->
+      <!--====================our portfolio section four===-->
       <section>
         <h2 class="portfolio">Our Portfolio</h2>
         <ul>
@@ -130,8 +137,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="banking-app">Banking App</h3>
+            <p class="banking-app-text">App</p>
           </li>
           <li>
             <img
@@ -186,7 +193,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
         >Web<span class="studio"> Studio </span></a
       >
