add initial fils

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a class="logo" href="./index.html"
           >Web<span class="studio-head">Studio</span></a
         >
-        <ul>
-          <li><a class="link-top-one" href="./index.html">Studio</a></li>
+        <ul class="link-top-one">
+          <li><a href="./index.html">Studio</a></li>
           <li><a class="link-top" href="">Portfolio</a></li>
           <li><a class="link-top" href="">Contacts</a></li>
         </ul>
