--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           >Web<span class="studio-head">Studio</span></a
         >
         <ul class="link-top-one">
-          <li><a href="./index.html">Studio</a></li>
+          <li><a class="link-top" href="./index.html">Studio</a></li>
           <li><a class="link-top" href="">Portfolio</a></li>
           <li><a class="link-top" href="">Contacts</a></li>
         </ul>
