--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link-address" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -59,22 +61,22 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="strategy">Punctuality</h3>
+            <p class="strategy-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="strategy">Diligence</h3>
+            <p class="strategy-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="strategy">Technologies</h3>
+            <p class="strategy-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
