add initial fils

--- a/index.html
+++ b/index.html
@@ -100,30 +100,38 @@
             <p class="our-team-discr">Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260" />
+            <img
+              class="our-team-list"
+              src="./images/Tom.jpg"
+              alt="Tom"
+              width="264"
+              height="260"
+            />
 
-            <h3>Tom Ford</h3>
+            <h3 class="our-team-lead">Tom Ford</h3>
 
             <p class="our-team-discr">Frontend Developer</p>
           </li>
           <li>
             <img
+              class="our-team-list"
               src="./images/Camila.jpg"
               alt="Camila"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="our-team-lead">Camila Garcia</h3>
             <p class="our-team-discr">Marketing</p>
           </li>
           <li>
             <img
+              class="our-team-list"
               src="./images/Daniel.jpg"
               alt="Daniel"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="our-team-lead">Daniel Wilson</h3>
             <p class="our-team-discr">UI Designer</p>
           </li>
         </ul>
@@ -149,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="banking-app">Cashless Payment</h3>
+            <p class="banking-app-text">Marketing</p>
           </li>
           <li>
             <img
@@ -159,8 +167,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="banking-app">Meditation App</h3>
+            <p class="banking-app-text">App</p>
           </li>
           <li>
             <img
@@ -169,8 +177,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="banking-app">Taxi Service</h3>
+            <p class="banking-app-text">Marketing</p>
           </li>
           <li>
             <img
@@ -179,8 +187,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="banking-app">Screen Illustrations</h3>
+            <p class="banking-app-text">Design</p>
           </li>
           <li>
             <img
@@ -189,8 +197,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="banking-app">Online Courses</h3>
+            <p class="banking-app-text">Marketing</p>
           </li>
         </ul>
       </section>
