add initial fils

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <ul>
           <li>
             <img
+              class="team-img"
               class="our-team-list"
               src="./images/img.jpg"
               alt="Mark"
@@ -101,6 +102,7 @@
           </li>
           <li>
             <img
+              class="team-img"
               class="our-team-list"
               src="./images/Tom.jpg"
               alt="Tom"
@@ -114,6 +116,7 @@
           </li>
           <li>
             <img
+              class="team-img"
               class="our-team-list"
               src="./images/Camila.jpg"
               alt="Camila"
@@ -125,6 +128,7 @@
           </li>
           <li>
             <img
+              class="team-img"
               class="our-team-list"
               src="./images/Daniel.jpg"
               alt="Daniel"
