add initial fils

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       <!--===================our team section three=====-->
       <section class="team">
         <h2 class="our-team">Our Team</h2>
-        <ul>
+        <ul class="list-team">
           <li>
             <img
               class="team-img"
-              class="our-team-list"
+              class="our-team-list-two"
               src="./images/img.jpg"
               alt="Mark"
               width="264"
@@ -103,7 +103,7 @@
           <li>
             <img
               class="team-img"
-              class="our-team-list"
+              class="our-team-list-two"
               src="./images/Tom.jpg"
               alt="Tom"
               width="264"
@@ -117,7 +117,7 @@
           <li>
             <img
               class="team-img"
-              class="our-team-list"
+              class="our-team-list-two"
               src="./images/Camila.jpg"
               alt="Camila"
               width="264"
@@ -129,7 +129,7 @@
           <li>
             <img
               class="team-img"
-              class="our-team-list"
+              class="our-team-list-two"
               src="./images/Daniel.jpg"
               alt="Daniel"
               width="264"
