add initial fils

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <section class="team">
         <h2 class="our-team">Our Team</h2>
         <ul class="list-team">
-          <li>
+          <li class="team">
             <img
               class="team-img"
               src="./images/img.jpg"
@@ -99,7 +99,7 @@
             <h3 class="our-team-lead">Mark Guerrero</h3>
             <p class="our-team-discr">Product Designer</p>
           </li>
-          <li>
+          <li class="team">
             <img
               class="team-img"
               src="./images/Tom.jpg"
@@ -112,7 +112,7 @@
 
             <p class="our-team-discr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team">
             <img
               class="team-img"
               src="./images/Camila.jpg"
@@ -123,7 +123,7 @@
             <h3 class="our-team-lead">Camila Garcia</h3>
             <p class="our-team-discr">Marketing</p>
           </li>
-          <li>
+          <li class="team">
             <img
               class="team-img"
               src="./images/Daniel.jpg"
