--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </section>
       <!--===================our team section three=====-->
-      <section class="team">
+      <section class="team-section">
         <h2 class="our-team">Our Team</h2>
         <ul class="list-team">
           <li class="team">
